--- a/css/desktop.css
+++ b/css/desktop.css
@@ -18,7 +18,7 @@
     --radius: 40px;
     --radius-circle: 50%;
     --primary-color: rgb(253, 118, 0);
-    --feint: rgb(60, 60, 60);
+    --feint: rgb(50, 50, 50);
     --primary-feint: rgb(255, 243, 233);
     --placeholder-color: rgb(176, 176, 176);
     --font-family: 'Poller One', cursive;
@@ -29,7 +29,6 @@
 .ill-svg{
     transition: 0.1s;
     width: 100% !important;
-    margin-bottom: 20px;
 }
 
 .ill-svg:hover{
@@ -60,6 +59,11 @@
     top: 131px;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.top-design{
+    text-align: center;
+    padding: var(--padding);
 }
 
 .mid-gap{
@@ -107,6 +111,26 @@ body{
 }
 
 .status *{
+    color: white;
+}
+
+.debts{
+    width: auto;
+    width: 180px;
+    height: 180px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 38% 62% 63% 37% / 51% 61% 39% 49% ;
+    background-color: var(--feint);
+    transition: 0.1s;
+}
+
+.debts:hover{
+    transform: scale(1.1);
+}
+
+.debts *{
     color: white;
 }
 
@@ -793,9 +817,8 @@ img{
     display: flex;
     overflow: auto;
     gap: var(--mid-gap);
-    padding-top: 25px;
     margin: 0 -25px;
-    padding: var(--padding);
+    padding: 0 var(--padding);
     padding-bottom: 0;
 }
 
@@ -900,6 +923,11 @@ img{
     margin-top: 74px;
     opacity: 0.9;
     background-color: var(--primary-color);
+    transition: 0.1s;
+}
+
+.installment:hover{
+    transform: scale(1.1);
 }
 
 .bottom-nav-home{
@@ -1197,10 +1225,37 @@ hr{
     bottom: 0;
     z-index: 50;
     background-color: white;
-    display: block;
+    display: flex;
     justify-content: center;
     align-items: center;
     padding: var(--padding);
+}
+
+.popup-binder{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: white;
+    z-index: 300;
+    display: none;
+    opacity: 0.9;
+}
+
+.popup{
+    position: fixed;
+    z-index: 500;
+    bottom: -50px;
+    left: 0;
+    right: 0;
+    height: 0%;
+    padding: var(--padding);
+    transition: 0.1s;
+    overflow: auto;
+    background-color: white !important;
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
 }
 
 .design-container{
