--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1333,7 +1333,7 @@ hr{
     transform: scale(1.1);
 }
 
-/*.logo-orange-line{
+.logo-orange-line{
     border: 10px solid var(--primary-color);
     position: absolute;
     top: 0;
@@ -1353,7 +1353,7 @@ hr{
     left: 0;
     margin: 30px;
     border-radius: 50%;
-}*/
+}
 
 .logo-left-symbol{
     background-color: white;
