--- a/public/css/desktop.css
+++ b/public/css/desktop.css
@@ -63,7 +63,6 @@
 
 .top-design{
     text-align: center;
-    padding: var(--padding);
 }
 
 .mid-gap{
@@ -73,7 +72,28 @@
 body{
     margin: 0;
     animation: visible 0.4s;
+    padding: 0;
 }
+
+.body-flex{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    top: 0;
+}
+
+.body-flex-normal{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
 
 *{
     font-family: 'MyFont';
@@ -248,6 +268,10 @@ body{
     width: 100%;
     height: 1px;
     background-color: var(--input-color);
+}
+
+.overflow{
+    overflow: auto;
 }
 
 .google-logo{
@@ -1365,22 +1389,6 @@ hr{
 }
 
 .bottom-mountain{
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-}
-
-.bottom-mountain-static{
-    position: static;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-}
-
-.bottom-mountain-normal{
     width: 100%;
 }
 
